changing style to prevent text wrapping when minimizing panel bar.

--- a/app/assets/stylesheets/styles/layout.scss
+++ b/app/assets/stylesheets/styles/layout.scss
@@ -12,7 +12,7 @@ hgroup {float: left; width: 267px; height: 63px; border-right-width: 1px; positi
 .crowdvoice-logo {float: left; width: 160px; height: 25px; margin-right:4px}
 .crowdvoice-logo.gaza {float: left; width: 176px; height: 25px; margin-right:4px}
 .crowdvoice-about {float: left; height: 18px; width: 18px; margin-top: 3px}
-.crowdvoice-slogan {width: 100%; text-align: center; font-size: 12px; line-height: 1em; padding: 5px 0 9px;}
+.crowdvoice-slogan {display: block; width: 218px; margin: 0 auto; text-align: center; font-size: 12px; line-height: 1em; padding: 5px 10px 9px;}
 .theme-image {width: 100%; height: 3px}/* Update:ADD height atrribute:63px*/
 .theme-image > .top-line.gaza {height: 3px; border-width: 0}
 .theme-image > .top-line {height: 1px; border-width: 1px 0}
